# wideint

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
docs/: api.md
include/wideint/: bit.hpp  int.hpp  limits.hpp  wideint.hpp
include/wideint/basic_int/: basic_int.hpp
include/wideint/basic_int/detail/: common.hpp  cuda.hpp  fallback.hpp  gnu_arm64.hpp  gnu_x86_64.hpp  limb_ops.hpp  msvc_x86_64.hpp  platform_ops.hpp
include/wideint/detail/: common.hpp  platform_ops.hpp
include/wideint/operator/: arithmetic.hpp  assignment.hpp  comparison.hpp  increment_decrement.hpp  logical.hpp
tests/: test_wideint.cpp  test_wideint_cuda.cu
